first draft for reset button

--- a/public/partials/history.html
+++ b/public/partials/history.html
@@ -3,6 +3,7 @@
 	<p style="font-size:16px; ">History Tracker</p>
 	<div class="checkbox">
 		<label><input type="checkbox" checked id="show-history" ng-model="showHistory" >Show full history</label>
+		<button class="btn btn-small btn-primary" type="button" checked id="reset-history" ng-click="observer.reset()">Reset filters</button>
 	</div>
 	</div>
 	<script type="text/ng-template" id="tooltip_tmpl">
