enabled load More documents button

--- a/public/partials/document_list.html
+++ b/public/partials/document_list.html
@@ -17,7 +17,7 @@
 <div style="padding: 15px;" id="documents-view">
 <p style="font-size:16px">Document Overview</p>
     <p ng-show="hits > 0">Hits: {{hits}}</p>
-    <div class="btn btn-default load-more-button" ng-show="false" ng-click="retrieveNextDocSet()">
+    <div class="btn btn-default load-more-button" ng-show="true" ng-click="loadMore()">
         Load more documents
         <i class="glyphicon glyphicon-repeat"></i>
     </div>
