showing metadata associated to documents

--- a/public/partials/document_list.html
+++ b/public/partials/document_list.html
@@ -39,11 +39,13 @@
         <ul id="document-list">
             <li ng-repeat="item in sourceShared.documentList"
                 ng-class="{true: 'doc-list-highlight', false: 'doc-list-no-highlight'}[sourceShared.openDocuments.IDs.indexOf(item.id) > -1]"
+                ng-mouseleave="hidePopover(item.id)"
+                ng-mouseenter="showPopover(item.id)"
                 uib-popover-template="'doc_tooltip_tmpl'"
-                popover-trigger="'mouseenter:mouseleave'"
+                popover-trigger="none"
                 popover-title="Metadata for {{item.id}}"
                 popover-placement="right"
-
+                popover-is-open="popover.isOpen[{{item.id}}]"
                 >
                 <a href="#" ng-click="loadFullDocument(item.id)">
                     {{ item.metadata.Subject }}
