--- a/public/partials/document_list.html
+++ b/public/partials/document_list.html
@@ -56,4 +56,5 @@
     <div class="alert alert-info" ng-show="noMoreDocs">
         <p>No More Documents to load!</p>
     </div>
+    <div class="docs-loading" ng-show="docsLoading"><span>Loading ...</span></div>
 </div>
