show overall document hits

--- a/public/partials/document_list.html
+++ b/public/partials/document_list.html
@@ -16,7 +16,7 @@
 
 <div style="padding: 15px;" id="documents-view">
 <p style="font-size:16px">Document Overview</p>
-    <p ng-show="hits > 0">Hits: {{hits}}</p>
+    <p ng-show="hits > 0">Hits: {{hits}} out of {{sourceShared.documentsInDB}}</p>
     <div class="btn btn-default load-more-button" ng-show="false" ng-click="loadMore()">
         Load more documents
         <i class="glyphicon glyphicon-repeat"></i>
