notify when all documents are loaded

--- a/public/partials/document_list.html
+++ b/public/partials/document_list.html
@@ -52,9 +52,10 @@
                 </a>
             </li>
         </ul>
+        <div class="alert alert-info" ng-show="iteratorEmpty">
+            <p>All matching Documents loaded!</p>
+        </div>
     </div>
-    <div class="alert alert-info" ng-show="noMoreDocs">
-        <p>No More Documents to load!</p>
-    </div>
-    <div class="docs-loading" ng-show="docsLoading"><span>Loading ...</span></div>
+
+    <div class="docs-loading" ng-show="showLoading"><span>Loading ...</span></div>
 </div>
