Add first visjs-based graph draft
The graph shows the same nodes and relationships as the old one, but
does not adapt to other filters than the full-text search. Inducing
relationships from ES follows tomorrow.

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -84,10 +84,19 @@ line {
     pointer-events: none;
 }
 
+/* old network */
 #network-graph {
     width: 100%;
     height: calc(100% - 96px);
     position: absolute;
+}
+
+#mynetwork {
+    position: absolute;
+    overflow-y: hidden;
+    width: 100%;
+    height: 100%;
+    background-color:#333333;
 }
 
 #merge-node
