Minor styling changes

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -95,8 +95,13 @@ line {
     position: absolute;
     overflow-y: hidden;
     width: 100%;
-    height: 100%;
+    height: calc(100% - 60px);
     background-color:#333333;
+}
+
+div.vis-network div.vis-navigation div.vis-button {
+    background-color: white;
+    margin-bottom: 20px;
 }
 
 #merge-node
