added Graph Properties Share Service and

--- a/public/partials/source.html
+++ b/public/partials/source.html
@@ -17,7 +17,7 @@
 <div class="source-buttons-area">
     <b>Highlighting:</b>
       <toggle-switch class="toggle-switch" ng-model="highlightState.on" on-label="On" off-label="Off" ng-click="toggleHighlighting()"></toggle-switch>
-    <button type="button" class="btn btn-small btn-primary" data-toggle="modal"
+    <!--<button type="button" class="btn btn-small btn-primary" data-toggle="modal"
             data-target="#annotateDocumentModal" title="Click on this button to annotate parts of the document.">
         <i class="glyphicon glyphicon-comment"></i>
         Annotate
@@ -26,7 +26,7 @@
             data-target="#createEntityModal" title="Mark a passage in the document and click on this button to create an entity out of it. The marked text will be the name of the entity. The entity will be added to the graph.">
         <i class="glyphicon glyphicon-pencil"></i>
         Create Entity
-    </button>
+    </button>-->
 </div>
 
 <!-- Modals -->
