Implement edge frequency slider without jittering

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -62,24 +62,27 @@
                 </nav>
 
                 <main id="center-box" resizable r-directions="['right']" r-flex="true" flex="none">
-                    <div ng-controller="ToolController" ng-include=" 'assets/partials/tools.html' "></div>
-                    <div id="network-maps-container">
+                    <!-- div id="network"  ng-include=" 'assets/partials/network.html' " onload="loaded()" ng-controller="FancyNetworkController"></div>-->
+                    <div id="network" ui-view="network" onload="loaded()"></div>
+
+                    <!--<div ng-controller="ToolController" ng-include=" 'assets/partials/tools.html' "></div>-->
+                    <!--<div id="network-maps-container">-->
                             <!-- Nav tabs -->
-                        <ul class="nav nav-tabs" role="tablist">
-                            <li role="presentation" class="active"><a href="#network" aria-controls="network" role="tab" data-toggle="tab">Network</a></li>
+                        <!--<ul class="nav nav-tabs" role="tablist">
+                            <li role="presentation" class="active"><a href="#network" aria-controls="network" role="tab" data-toggle="tab">Network</a></li>-->
                             <!--<li role="presentation"><a href="#map" aria-controls="map" role="tab" data-toggle="tab">Map</a></li>-->
-                        </ul>
+                        <!--</ul>-->
                             <!-- Tab panes -->
-                        <div class="tab-content">
+                        <!--<div class="tab-content">-->
                             <!--<div role="tabpanel" class="tab-pane active" id="network" ng-controller="NetworkController">-->
-                            <div role="tabpanel" class="tab-pane active" id="network" ng-controller="FancyNetworkController">
-                                <div ng-include=" 'assets/partials/network.html' " onload="loaded()"></div>
-                            </div>
+                            <!--<div role="tabpanel" class="tab-pane active" id="network" ng-controller="FancyNetworkController">-->
+                                <!--<div ng-include=" 'assets/partials/network.html' " onload="loaded()"></div>-->
+                            <!--</div>-->
                             <!--<div role="tabpanel" class="tab-pane" id="map" ng-controller="MapController">
                                 <div ng-include=" 'assets/partials/map.html' " onload="loaded()"></div>
                             </div>-->
-                        </div>
-                    </div>
+                        <!--</div>-->
+                    <!--</div>-->
 
                 </main>
 
