demo video on help button

--- a/public/partials/header.html
+++ b/public/partials/header.html
@@ -43,7 +43,7 @@
           type="button" data-toggle="tooltip" title="More informations about new/s/leak">
         <i class="fa fa-info fa-2x"></i>
       </a>
-      <a class="btn btn-default navbar-btn" href="./assets/manual.pdf" target="_blank"
+      <a class="btn btn-default navbar-btn" href="./assets/VIPvideo.mp4" target="_blank"
           type="button" data-toggle="tooltip" title="Help">
         <i class="fa fa-question fa-2x"></i>
       </a>
