--- a/public/partials/history.html
+++ b/public/partials/history.html
@@ -18,10 +18,7 @@
 <div style="padding-left: 10px;">
 	<div style="float: left; padding-top: 10px">
 	<p style="font-size:16px; ">History Tracker</p>
-	<div class="checkbox">
-		<label><input type="checkbox" checked id="show-history" ng-model="showHistory" >Show full history</label>
-		<button class="btn btn-small btn-primary" type="button" checked id="reset-history" ng-click="observer.reset()">Reset filters</button>
-	</div>
+
 	</div>
 	<script type="text/ng-template" id="tooltip_tmpl">
 		<div ng-mouseleave="hidePopover(obj.id)" ng-mouseenter="showPopover(obj.id)">
@@ -37,7 +34,7 @@
 			</button>
 		</div>
 	</script>
-	<div class="alert alert-info" ng-show="history.length == 0" style="display: inline-block">
+	<div class="alert alert-info" ng-show="history.length == 0" style="display: inline-block; margin-bottom: 0">
 		<p>No elements in history.</p>
 	</div>
 	<ul id="historyList" class="list-group">
@@ -58,5 +55,10 @@
 			<span>{{obj.data.name}}</span>
 		</li>
 	</ul>
-
+	<div class="checkbox">
+		<button class="btn btn-small btn-primary" type="button" checked id="reset-history" ng-click="observer.reset()">Reset filters</button>
+		<button class="btn btn-small btn-primary" type="button" checked id="save-history" ng-click="saveHistory()"><i class="glyphicon glyphicon-save"></i> Save State</button>
+		<file-field class="btn btn-small btn-primary" ng-model="uploadFile" ng-click="loadHistory()"><i class="glyphicon glyphicon-open"></i> Load State</file-field>
+		<label><input type="checkbox" checked id="show-history" ng-model="showHistory" >Show full history</label>
+	</div>
 </div>
