--- a/public/partials/header.html
+++ b/public/partials/header.html
@@ -18,31 +18,43 @@
 <div class="navbar navbar-inverse titlebar">
 
   <div class="container-fluid">
-    
     <a class="navbar-brand title" href="#">new/s/leak</a>
 
+    <md-input-container>
+      <md-select ng-model="selectedDataset" ng-change="changeDataset()" aria-label="dataset">
+        <md-option ng-repeat="data in datasets" ng-value="data" ng-selected="$index === 0">
+          {{data}}
+        </md-option>
+      </md-select>
+    </md-input-container>
+
     <div class="navbar-right links">
+
       <a href="https://en.wikipedia.org/wiki/Volkswagen_Foundation" target="_blank" data-toggle="tooltip" title="Volkswagen Foundation">
         <img style="height: 43px; object-fit:contain" src="./assets/images/logo_vw_stiftung.png">
       </a>
 
-
       <a href="https://www.lt.tu-darmstadt.de/de/lt-home/" target="_blank" data-toggle="tooltip" title="Language Technology Group">
         <img style="height: 43px; object-fit:contain" src="./assets/images/logo_language_technology_group.png">
       </a>
+
       <a href="http://www.gris.tu-darmstadt.de" target="_blank" data-toggle="tooltip" title="Interactive Graphics Systems Group">
         <img style="height: 43px; object-fit:contain" src="./assets/images/logo_graphisch-interaktive_systeme.png">
       </a>
+
       <a href="https://www.tu-darmstadt.de" data-toggle="tooltip" target="_blank" title="TU Darmstadt">
         <img style="height: 43px; object-fit:contain" src="./assets/images/logo_tu_darmstadt.png">
       </a>
+
       <a href="http://www.spiegel.de/" target="_blank" data-toggle="tooltip" title="Der Spiegel">
         <img style="height: 43px; object-fit:contain" src="./assets/images/logo_der_spiegel.png">
       </a>
+
       <a class="btn btn-default navbar-btn" href="http://newsleak.io/projekt/" target="_blank"
           type="button" data-toggle="tooltip" title="More informations about new/s/leak">
         <i class="fa fa-info fa-2x"></i>
       </a>
+
       <a class="btn btn-default navbar-btn" href="./assets/VIPvideo.mp4" target="_blank"
           type="button" data-toggle="tooltip" title="Help">
         <i class="fa fa-question fa-2x"></i>
