Anzahl der angezeigten Knoten ist jetzt via slider einstellbar Bugfix für: Kanten werden nicht gefunden wenn Startknoten kleinere Id hat als Endknoten

--- a/public/partials/tools.html
+++ b/public/partials/tools.html
@@ -35,6 +35,9 @@
       </div>
 -->
       <div class="slider-container">
+        <input ng-model="sliderEdgeAmount.value" type="text" slider options="sliderEdgeAmount.options"/>
+      </div>
+      <div class="slider-container">
         <input ng-model="sliderEdgeFrequency.value" type="text" slider options="sliderEdgeFrequency.options"/>
       </div>
       <!--<toggle-switch
