User kann nun Kantenarten für die Guidance gewichten

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -21,6 +21,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
         <link rel="icon" href="./assets/images/favicon.ico" type="image/x-icon" />
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+        rel="stylesheet">
 
         <title>new/s/leak</title>
 
