--- a/public/partials/network.html
+++ b/public/partials/network.html
@@ -26,7 +26,27 @@
 
 <md-toolbar>
     <div class="md-toolbar-tools">
-        <h3><span>Network View</span></h3>
+        <md-input-container layout flex="10">
+            <label>#Per</label>
+            <input ng-model="numPer" type="number" step="1">
+        </md-input-container>
+
+        <md-input-container layout flex="10">
+            <label>#Org</label>
+            <input ng-model="numOrg" type="number" step="1">
+        </md-input-container>
+
+        <md-input-container layout flex="10">
+            <label>#Loc</label>
+            <input ng-model="numLoc" type="number" step="1">
+        </md-input-container>
+
+        <md-input-container layout flex="10">
+            <label>#Misc</label>
+            <input ng-model="numMisc" type="number" step="1">
+        </md-input-container>
+
+        <!--<h3><span>Network View</span></h3>-->
         <div flex="20" layout layout-align="center center">
             <span class="md-body-1">Edge Importance</span>
         </div>
