fix duplicate graph load

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -61,7 +61,7 @@
 
                 <main id="center-box" resizable r-directions="['right']" r-flex="true" flex="none">
                     <!-- div id="network"  ng-include=" 'assets/partials/network.html' " onload="loaded()" ng-controller="FancyNetworkController"></div>-->
-                    <div id="network" ui-view="network" onload="loaded()"></div>
+                    <div id="network" ui-view="network"></div>
 
                     <!--<div ng-controller="ToolController" ng-include=" 'assets/partials/tools.html' "></div>-->
                     <!--<div id="network-maps-container">-->
