--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -108,20 +108,16 @@ div.vis-network div.vis-navigation div.vis-button {
 
 div.popupMenu {
     position: absolute;
-    top:0px;
-    left:0px;
-    /*width:90px;
-    height:100px;*/
+    top: 0px;
+    left: 0px;
     display: block;
     background-color: #f2f2f2;
     border-radius: 4px;
-
     font-family: Arial, sans-serif;
     font-size: 14px;
     min-width: 150px;
     border: 1px solid #d4d4d4;
-
-    z-index:1200;
+    z-index: 1200;
 }
 
 div.popupMenu ul {
@@ -247,6 +243,16 @@ div.tooltip {
 #legend-content svg {
     display: block;
     margin: auto;
+}
+
+/*
+    ======================================
+    Map
+    ======================================
+*/
+
+#map-container {
+    margin: 0 10px;
 }
 
 /*
