--- a/public/partials/network.html
+++ b/public/partials/network.html
@@ -25,7 +25,7 @@
 <!-- Network -->
 
 <md-toolbar>
-    <div class="md-toolbar-tools">
+    <div class="md-toolbar-tools" md-theme="control-theme">
         <md-input-container layout flex="10">
             <label>#Per</label>
             <input ng-model="numPer" type="number" step="1">
