User-Interface der Matrix überarbeitet Gewichtung des User-Prioritäten angepasst

--- a/public/partials/tools.html
+++ b/public/partials/tools.html
@@ -42,7 +42,7 @@
         </div>
       </div>
       <div class="col-md-3">
-      <table style="float: right">
+      <table style="float: right" class="noselect">
         <tr ng-repeat-start="(xIndex, x) in categories" ng-if="$first">
           <td ng-repeat="c in categories" id="{{xIndex}}.{{$index}}" ng-click="setUI(xIndex,$index)">
             <i class="material-icons">{{c.img}}</i>
@@ -52,7 +52,9 @@
           <td ng-repeat-start="y in categories" ng-if="$first" id="{{xIndex}}.{{$index}}" ng-click="setUI(xIndex,$index)">
             <i class="material-icons">{{x.img}}</i>
           </td>
-          <td ng-repeat-end="y in categories" ng-if="!$first" id="{{xIndex}}.{{$index}}" ng-click="setUI(xIndex,$index)"></td>
+          <td ng-repeat-end="y in categories" ng-if="!$first" id="{{xIndex}}.{{$index}}" ng-click="setUI(xIndex,$index)">
+            <i class="material-icons red" id="{{xIndex}}.{{$index}}.icon" style="visibility:hidden;">block</i>
+          </td>
         </tr>
       </table>
       </div>
