--- a/public/partials/editNode.html
+++ b/public/partials/editNode.html
@@ -27,7 +27,7 @@
             </div>
         </md-toolbar>
         <md-dialog-content style="max-width:800px;max-height:810px;">
-            <md-whiteframe class="md-whiteframe-z2" layout layout-align="center center">
+            <md-whiteframe class="md-whiteframe-z2 md-padding   " layout>
                 <md-content layout-padding layout="column">
                     <md-input-container>
                         <label>Name</label>
