--- a/public/partials/network.html
+++ b/public/partials/network.html
@@ -25,7 +25,7 @@
 <!-- Network -->
 
 <md-toolbar>
-    <div class="md-toolbar-tools" md-theme="control-theme">
+    <div class="md-toolbar-tools" md-theme="control-theme" style="margin-top: 10px;">
         <!-- TODO Generate in for loop -->
         <md-input-container layout flex="10">
             <label>#Per</label>
