Removed unused code

--- a/public/partials/document.html
+++ b/public/partials/document.html
@@ -27,7 +27,7 @@
 
     <md-tab-body>
         <md-content flex layout-padding>
-            <div ng-bind-html="tab.content"></div>
+            <div ng-bind-html="renderDoc(tab.content)"></div>
         </md-content>
     </md-tab-body>
 </md-tab>
