--- a/public/partials/document.html
+++ b/public/partials/document.html
@@ -27,7 +27,7 @@
 
     <md-tab-body>
         <md-content flex layout-padding>
-            <!-- TODO WHy is this called three times although I use one time binding -->
+            <!-- TODO Why is this called three times although I use one time binding -->
             <div ng-bind-html="::renderDoc(tab)"></div>
         </md-content>
     </md-tab-body>
