Replace Bootstrap navbar with material design

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -59,6 +59,10 @@ html, body {
     color: #fafafa;
 }
 
+.md-button.md-small {
+    min-width: 3%;
+}
+
 /*
     ======================================
     Network
