--- a/public/partials/document.html
+++ b/public/partials/document.html
@@ -26,9 +26,8 @@
     </md-tab-label>
 
     <md-tab-body>
-        <md-content flex layout-padding>
-            <!-- TODO Why is this called three times although I use one time binding -->
-            <div ng-bind-html="::renderDoc(tab)"></div>
+        <md-content flex layout-padding ng-init="content = renderDoc(tab)">
+            <div ng-bind-html="content"></div>
         </md-content>
     </md-tab-body>
 </md-tab>
